--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -177,6 +177,7 @@ Redistribution and use in source and binary forms, with or without modification,
       <item>Miami Flyway</item>
       <item>NewOrleans Flyway</item>
       <item>Orlando Flyway</item>
+      <item>Phoenix Flyway</item>
       <item>SaltLakeCity Flyway</item>
       <item>SanDiego Flyway</item>
       <item>SanFrancisco Flyway</item>
